--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^8.0.2",
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^2.25.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "graphql": "^15.5.1",
+    "graphql-tools": "^7.0.5",
     "mongoose": "^5.13.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
