--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/graphql": "^8.0.2",
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@typegoose/typegoose": "^8.3.0",
     "apollo-server-express": "^2.25.2",
     "argon2": "^0.28.2",
     "class-transformer": "^0.4.0",
