--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "graphql": "^15.5.1",
     "graphql-tools": "^7.0.5",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.5",
     "mongoose": "^5.13.3",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
@@ -60,13 +61,9 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
     "jest": "27.0.6",
     "jest-extended": "^0.11.5",
     "jest-mock-extended": "^1.0.18",
-    "prettier": "^2.3.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
