--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "express-useragent": "^1.0.15",
     "generate-password": "^1.6.1",
     "graphql": "^15.5.1",
     "graphql-tools": "^7.0.5",
@@ -56,6 +57,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/express-useragent": "^1.0.1",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose": "^5.11.97",
