--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "seed:dev": "ts-node -r tsconfig-paths/register src/seed.ts"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.1",
+    "@nestjs/axios": "^0.0.4",
+    "@nestjs/bull": "^0.4.2",
     "@nestjs/common": "^8.2.4",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.2.4",
@@ -34,7 +37,7 @@
     "@typegoose/typegoose": "^9.4.0",
     "apollo-server-express": "^3.6.0",
     "argon2": "^0.28.3",
-    "axios": "^0.24.0",
+    "bull": "^4.2.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
@@ -42,9 +45,11 @@
     "generate-password": "^1.6.1",
     "graphql": "^15.5.1",
     "graphql-tools": "^7.0.5",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.5",
     "mongoose": "^6.1.4",
+    "nodemailer": "^6.7.2",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
     "reflect-metadata": "^0.1.13",
@@ -55,6 +60,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bull": "^3.15.7",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/express-useragent": "^1.0.1",
@@ -62,6 +68,7 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
